start of header

--- a/web/themes/custom/fishing_with_triston/fishing_with_triston.libraries.yml
+++ b/web/themes/custom/fishing_with_triston/fishing_with_triston.libraries.yml
@@ -2,5 +2,8 @@ global-styling:
   css:
     theme:
       css/style.css: {}
+      css/vars.css: {}
+      css/header.css: {}
+      css/main.css: {}
   js:
     js/script.js: {}
