--- a/web/themes/custom/fishing_with_triston/fishing_with_triston.libraries.yml
+++ b/web/themes/custom/fishing_with_triston/fishing_with_triston.libraries.yml
@@ -5,5 +5,6 @@ global-styling:
       css/vars.css: {}
       css/header.css: {}
       css/main.css: {}
+      css/region.css: {}
   js:
     js/script.js: {}
