--- a/web/sites/config/sync/core.entity_form_display.node.location.default.yml
+++ b/web/sites/config/sync/core.entity_form_display.node.location.default.yml
@@ -8,12 +8,88 @@ dependencies:
     - field.field.node.location.field_fish_species
     - field.field.node.location.field_hero_copy
     - field.field.node.location.field_hero_image
+    - field.field.node.location.field_image_carousel
+    - field.field.node.location.field_image_carousel_copy
     - field.field.node.location.field_map_image
     - node.type.location
   module:
+    - field_group
     - media_library
+    - paragraphs
     - path
     - text
+third_party_settings:
+  field_group:
+    group_hero_settings:
+      children:
+        - title
+        - field_hero_image
+        - field_hero_copy
+      label: 'Hero Settings'
+      region: content
+      parent_name: ''
+      weight: 0
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: true
+        id: ''
+        label_as_html: false
+        formatter: open
+        description: 'Settings for the hero'
+        required_fields: true
+    group_location_info:
+      children:
+        - field_description
+        - field_address
+        - field_map_image
+      label: 'Location Info'
+      region: content
+      parent_name: ''
+      weight: 1
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_fish_species:
+      children:
+        - field_fish_species
+      label: 'Fish Species'
+      region: content
+      parent_name: ''
+      weight: 2
+      format_type: details_sidebar
+      format_settings:
+        classes: ''
+        show_empty_fields: true
+        id: ''
+        label_as_html: false
+        open: true
+        description: ''
+        required_fields: true
+        weight: 0
+    group_carousel_images:
+      children:
+        - field_image_carousel_copy
+        - field_image_carousel
+      label: 'Carousel Images'
+      region: content
+      parent_name: ''
+      weight: 3
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        formatter: closed
+        description: ''
+        required_fields: true
 id: node.location.default
 targetEntityType: node
 bundle: location
@@ -21,13 +97,13 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   field_address:
     type: string_textarea
-    weight: 26
+    weight: 3
     region: content
     settings:
       rows: 2
@@ -35,7 +111,7 @@ content:
     third_party_settings: {  }
   field_description:
     type: text_textarea
-    weight: 3
+    weight: 2
     region: content
     settings:
       rows: 5
@@ -43,7 +119,7 @@ content:
     third_party_settings: {  }
   field_fish_species:
     type: options_buttons
-    weight: 28
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -62,36 +138,62 @@ content:
     settings:
       media_types: {  }
     third_party_settings: {  }
+  field_image_carousel:
+    type: paragraphs
+    weight: 28
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
+    third_party_settings: {  }
+  field_image_carousel_copy:
+    type: text_textarea
+    weight: 27
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   field_map_image:
     type: media_library_widget
-    weight: 27
+    weight: 4
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 6
+    weight: 7
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 9
+    weight: 10
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 7
+    weight: 8
     region: content
     settings:
       display_label: true
@@ -106,7 +208,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 4
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
