--- a/web/sites/config/sync/system.theme.global.yml
+++ b/web/sites/config/sync/system.theme.global.yml
@@ -1,10 +1,10 @@
 _core:
   default_config_hash: KZiV2LB312xgJBphfq5BTjmp16xiR5KM8InBJ-pff7Y
 favicon:
-  mimetype: image/vnd.microsoft.icon
-  path: ''
+  mimetype: image/png
+  path: 'public://FwT_favicon_64x64_bigger_text (4).png'
   url: ''
-  use_default: true
+  use_default: false
 features:
   comment_user_picture: true
   comment_user_verification: true
