--- a/web/sites/config/sync/core.entity_form_display.media.image.default.yml
+++ b/web/sites/config/sync/core.entity_form_display.media.image.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.media.image.field_media_image
-    - image.style.thumbnail
+    - image.style.media_library
     - media.type.image
   module:
     - focal_point
@@ -22,13 +22,19 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  directory:
+    type: options_select
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_media_image:
     type: image_focal_point
     weight: 0
     region: content
     settings:
       progress_indicator: throbber
-      preview_image_style: thumbnail
+      preview_image_style: media_library
       preview_link: true
       offsets: '50,50'
     third_party_settings: {  }
