--- a/web/sites/config/sync/core.entity_form_display.node.location.default.yml
+++ b/web/sites/config/sync/core.entity_form_display.node.location.default.yml
@@ -10,7 +10,12 @@ dependencies:
     - field.field.node.location.field_hero_image
     - field.field.node.location.field_image_carousel
     - field.field.node.location.field_image_carousel_copy
+    - field.field.node.location.field_location_fall_lures
+    - field.field.node.location.field_location_spring_lures
+    - field.field.node.location.field_location_summer_lures
     - field.field.node.location.field_map_image
+    - field.field.node.location.field_recommended_lures_copy
+    - field.field.node.location.field_tips_and_tricks
     - node.type.location
   module:
     - field_group
@@ -90,6 +95,103 @@ third_party_settings:
         formatter: closed
         description: ''
         required_fields: true
+    group_summer:
+      children:
+        - field_location_summer_lures
+      label: Summer
+      region: content
+      parent_name: group_seasons
+      weight: 33
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_fall:
+      children:
+        - field_location_fall_lures
+      label: Fall
+      region: content
+      parent_name: group_seasons
+      weight: 34
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_spring:
+      children:
+        - field_location_spring_lures
+      label: Spring
+      region: content
+      parent_name: group_seasons
+      weight: 32
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_recommended_lures:
+      children:
+        - field_recommended_lures_copy
+        - group_seasons
+      label: 'Recommended Lures'
+      region: content
+      parent_name: ''
+      weight: 6
+      format_type: fieldset
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        description: ''
+        required_fields: true
+    group_seasons:
+      children:
+        - group_spring
+        - group_summer
+        - group_fall
+      label: Seasons
+      region: content
+      parent_name: group_recommended_lures
+      weight: 31
+      format_type: tabs
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        direction: vertical
+        width_breakpoint: 640
+    group_tips:
+      children:
+        - field_tips_and_tricks
+      label: Tips
+      region: content
+      parent_name: ''
+      weight: 4
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        formatter: closed
+        description: ''
+        required_fields: true
 id: node.location.default
 targetEntityType: node
 bundle: location
@@ -97,7 +199,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -164,6 +266,60 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+  field_location_fall_lures:
+    type: paragraphs
+    weight: 34
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
+    third_party_settings: {  }
+  field_location_spring_lures:
+    type: paragraphs
+    weight: 31
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
+    third_party_settings: {  }
+  field_location_summer_lures:
+    type: paragraphs
+    weight: 32
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
+    third_party_settings: {  }
   field_map_image:
     type: media_library_widget
     weight: 4
@@ -171,29 +327,45 @@ content:
     settings:
       media_types: {  }
     third_party_settings: {  }
+  field_recommended_lures_copy:
+    type: text_textarea
+    weight: 30
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_tips_and_tricks:
+    type: text_textarea
+    weight: 5
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   path:
     type: path
-    weight: 9
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 7
+    weight: 9
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 10
+    weight: 12
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 8
+    weight: 10
     region: content
     settings:
       display_label: true
@@ -208,7 +380,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 7
     region: content
     settings:
       match_operator: CONTAINS
