--- a/web/sites/config/sync/core.entity_view_display.media.image.media_library.yml
+++ b/web/sites/config/sync/core.entity_view_display.media.image.media_library.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.media_library
     - field.field.media.image.field_media_image
-    - image.style.medium
+    - image.style.media_library
     - media.type.image
   module:
     - image
@@ -20,8 +20,8 @@ content:
     type: image
     label: hidden
     settings:
-      image_style: medium
       image_link: ''
+      image_style: media_library
       image_loading:
         attribute: lazy
     third_party_settings: {  }
