--- a/web/sites/config/sync/core.entity_view_display.node.page.default.yml
+++ b/web/sites/config/sync/core.entity_view_display.node.page.default.yml
@@ -4,8 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.page.body
+    - field.field.node.page.field_home_hero
+    - image.style.focal_point_thumbnail
     - node.type.page
   module:
+    - media
     - text
     - user
 _core:
@@ -22,7 +25,20 @@ content:
     third_party_settings: {  }
     weight: 100
     region: content
+  field_home_hero:
+    type: media_thumbnail
+    label: above
+    settings:
+      image_link: ''
+      image_style: focal_point_thumbnail
+      image_loading:
+        attribute: lazy
+    third_party_settings: {  }
+    weight: 102
+    region: content
   links:
+    settings: {  }
+    third_party_settings: {  }
     weight: 101
     region: content
 hidden: {  }
