--- a/web/sites/config/sync/media.type.image.yml
+++ b/web/sites/config/sync/media.type.image.yml
@@ -1,7 +1,12 @@
 uuid: c81d8426-22f6-4fdf-8ce5-c83af0f70132
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - crop
+third_party_settings:
+  crop:
+    image_field: field_media_image
 _core:
   default_config_hash: 6Qope5wG7HUpV0tPOBMtDI_GZkHFcF1Xj4hgD9Cu_hM
 id: image
