--- a/web/themes/custom/fishing_with_triston/fishing_with_triston.libraries.yml
+++ b/web/themes/custom/fishing_with_triston/fishing_with_triston.libraries.yml
@@ -14,6 +14,7 @@ global-styling:
       css/location/image-carousel.css: {}
       css/location/recommended-lures.css: {}
       css/location/species.css: {}
+      css/block/latest-blogs.css: {}
   js:
     js/script.js: {}
     js/image-carousel.js: {}
