--- a/web/sites/config/sync/field.field.node.lure.field_lure_image.yml
+++ b/web/sites/config/sync/field.field.node.lure.field_lure_image.yml
@@ -1,26 +1,26 @@
-uuid: 69505a0e-747c-46bc-b800-dda234149241
+uuid: ef009a41-d22c-4906-b046-1a379935ba20
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_fish_species
-    - node.type.fish
-    - node.type.location
-id: node.location.field_fish_species
-field_name: field_fish_species
+    - field.storage.node.field_lure_image
+    - media.type.image
+    - node.type.lure
+id: node.lure.field_lure_image
+field_name: field_lure_image
 entity_type: node
-bundle: location
-label: 'Fish Species'
+bundle: lure
+label: 'Lure Image'
 description: ''
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:node'
+  handler: 'default:media'
   handler_settings:
     target_bundles:
-      fish: fish
+      image: image
     sort:
       field: _none
       direction: ASC
