--- a/web/sites/config/sync/field.field.paragraph.location_lure_and_copy.field_lure.yml
+++ b/web/sites/config/sync/field.field.paragraph.location_lure_and_copy.field_lure.yml
@@ -1,11 +1,11 @@
-uuid: 0aa5887a-91e9-4ade-8281-6f4cb0daf225
+uuid: a735f717-8f7b-449a-a747-7b055337b796
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_lure
+    - node.type.lure
     - paragraphs.paragraphs_type.location_lure_and_copy
-    - taxonomy.vocabulary.lures
 id: paragraph.location_lure_and_copy.field_lure
 field_name: field_lure
 entity_type: paragraph
@@ -17,13 +17,13 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:taxonomy_term'
+  handler: 'default:node'
   handler_settings:
     target_bundles:
-      lures: lures
+      lure: lure
     sort:
-      field: name
-      direction: asc
+      field: _none
+      direction: ASC
     auto_create: false
-    auto_create_bundle: fish_species
+    auto_create_bundle: ''
 field_type: entity_reference
