--- a/web/sites/config/sync/core.extension.yml
+++ b/web/sites/config/sync/core.extension.yml
@@ -25,6 +25,7 @@ module:
   filter: 0
   fishing_with_triston_utility: 0
   focal_point: 0
+  fwt_lure_suggestor: 0
   help: 0
   history: 0
   image: 0
