--- a/web/sites/config/sync/core.entity_view_display.node.lure.default.yml
+++ b/web/sites/config/sync/core.entity_view_display.node.lure.default.yml
@@ -3,16 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.lure.field_barometric_pressure
-    - field.field.node.lure.field_cloud_cover
     - field.field.node.lure.field_description
-    - field.field.node.lure.field_ideal_season
-    - field.field.node.lure.field_ideal_temperature
+    - field.field.node.lure.field_ideal_conditions
     - field.field.node.lure.field_lure_image
-    - field.field.node.lure.field_wind_type
+    - field.field.node.lure.field_lure_type
     - node.type.lure
   module:
-    - options
     - text
     - user
 id: node.lure.default
@@ -20,20 +16,6 @@ targetEntityType: node
 bundle: lure
 mode: default
 content:
-  field_barometric_pressure:
-    type: list_default
-    label: inline
-    settings: {  }
-    third_party_settings: {  }
-    weight: 12
-    region: content
-  field_cloud_cover:
-    type: list_default
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    weight: 11
-    region: content
   field_description:
     type: text_default
     label: hidden
@@ -41,19 +23,13 @@ content:
     third_party_settings: {  }
     weight: 4
     region: content
-  field_ideal_season:
-    type: list_default
-    label: hidden
-    settings: {  }
+  field_ideal_conditions:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    weight: 8
-    region: content
-  field_ideal_temperature:
-    type: list_default
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    weight: 9
+    weight: 13
     region: content
   field_lure_image:
     type: entity_reference_entity_view
@@ -64,12 +40,13 @@ content:
     third_party_settings: {  }
     weight: 3
     region: content
-  field_wind_type:
-    type: list_default
-    label: hidden
-    settings: {  }
+  field_lure_type:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    weight: 10
+    weight: 14
     region: content
   links:
     settings: {  }
