--- a/web/sites/config/sync/field.storage.node.field_lure_type.yml
+++ b/web/sites/config/sync/field.storage.node.field_lure_type.yml
@@ -1,19 +1,19 @@
-uuid: cc4b0e0b-3a52-4f7e-a9f8-b880c35f89db
+uuid: 8f2e588d-cd37-4f35-af10-6b032a89f2c7
 langcode: en
 status: true
 dependencies:
   module:
-    - media
+    - node
     - taxonomy
-id: taxonomy_term.field_lure_image
-field_name: field_lure_image
-entity_type: taxonomy_term
+id: node.field_lure_type
+field_name: field_lure_type
+entity_type: node
 type: entity_reference
 settings:
-  target_type: media
+  target_type: taxonomy_term
 module: core
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
